@@ -2,6 +2,12 @@ Revision history for Capture-Tiny
 
 {{$NEXT}}
 
+  Documented:
+
+  - Noted problems and workaround for FCGI's pathological tied STDIN
+    [rt.cpan.org #74681; thank you Karl Gaissmaier for testing the
+    workaround]
+
 0.15      2011-12-23 11:10:47 EST5EDT
 
   Fixed:
